# soroban-upgrade-safeguard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: contributing.md  documentation.md
src/: diff.rs  loader.rs  main.rs  mapper.rs  parser.rs  report.rs
tests/: env_metadata.rs  json_output.rs
