[package]
name = "soroban-upgrade-safeguard"
version = "0.1.0"
edition = "2021"
description = "A safety tool to check for breaking changes in Soroban contract upgrades."

[dependencies]
# WASM parsing
wasmparser = "0.201.0"

# Stellar/Soroban XDR
stellar-xdr = { version = "21.2.0", features = ["all", "arbitrary"] }

# CLI and Utilities
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
hex = "0.4"
